# bevy-inspector-egui

./: Cargo.toml
crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/src/inspector_egui_impls/: mod.rs  std_impls.rs
