[workspace]
resolver = "2"
members = ["crates/*"]

[patch.crates-io]
bevy = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_app = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_asset = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_core = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_core_pipeline = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_ecs = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }

bevy_hierarchy = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_log = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_math = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_pbr = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_reflect = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_render = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_utils = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_time = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }
bevy_window = { git = "https://github.com/Sophya/bevy", tag = "v0.12.3" }

bevy_egui = { git = "https://github.com/Sophya/bevy_egui", branch = "bevy-0.13-compatible" }